@@ -49,6 +49,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix potential packing errors when packing a NULL slurmdb_reservation_cond_t.
  -- Burst_buffer/cray - Prevent slurmctld daemon abort if "paths" operation
     fails. Now job will be held. Update job update time when held.
+ -- Fix issues with QOS flags Partition[Min|Max]Nodes to work correctly.
 
 * Changes in Slurm 16.05.9
 ==========================
